--- a/interface_logging/style.css
+++ b/interface_logging/style.css
@@ -21,6 +21,7 @@ body {
     justify-content: center; 
     align-items: center; 
     background-color: #f0f0f0;
+    
 }
 
 .image-section img {
@@ -35,7 +36,7 @@ body {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    background-color: #ffffff;
+    background-color: #f0f0f0;
     padding: 20px;
 }
 
