--- a/interface_inscription/inscription.css
+++ b/interface_inscription/inscription.css
@@ -103,3 +103,28 @@ body {
 .auth-container a:hover {
     text-decoration: underline;
 }
+
+@media screen and (max-width: 600px) {
+    body{
+        background-color: #f0f0f0;
+    }
+    .image-section {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    body{
+        background-color: #f0f0f0;
+    }
+}
+.form-section{
+    display: flex;
+    flex-direction: column;
+}
+.gradient{
+    font-family :Georgia, 'Times New Roman', Times, serif;
+    background-image: linear-gradient(to right,#4caf50,rgb(29, 101, 201));
+    background-clip: text; 
+    color: transparent;
+}
