--- a/interface_inscription/inscription.css
+++ b/interface_inscription/inscription.css
@@ -12,22 +12,16 @@ body {
     display: flex; 
     flex-direction: row; 
     width: 100%; 
-    height: 100vh; 
+    height: 100%; 
 }
 
 .image-section {
     flex: 1; 
     display: flex;
     justify-content: center; 
-    align-items: center; 
+    align-items:none; 
     background-color: #f0f0f0;
     
-}
-
-.image-section img {
-    max-width: 80%; 
-    max-height: 80%;
-    object-fit: contain; 
 }
 
 
@@ -70,12 +64,12 @@ body {
 }
 
 .auth-container input:focus {
-    border-color: #4caf50;
+    border-color: #0f518c   ;
     outline: none;
 }
 
 .auth-container button {
-    background-color: #4caf50;
+    background-color: #0f518c;
     color: white;
     padding: 0.8rem;
     border: none;
@@ -86,7 +80,7 @@ body {
 }
 
 .auth-container button:hover {
-    background-color: #45a049;
+    background-color: #0f518c;
 }
 
 .auth-container p {
@@ -96,10 +90,35 @@ body {
 }
 
 .auth-container a {
-    color: #4caf50;
+    color: #0f518c;
     text-decoration: none;
 }
 
 .auth-container a:hover {
     text-decoration: underline;
+}
+
+@media screen and (max-width: 600px) {
+    body{
+        background-color: #f0f0f0;
+    }
+    .image-section {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    body{
+        background-color: #f0f0f0;
+    }
+}
+.form-section{
+    display: flex;
+    flex-direction: column;
+}
+.form-section img{
+    height: 90px;
+    width: 170px;
+    margin-top: -90px;
+    margin-bottom: 20px;
 }
