--- a/interface_logging/style.css
+++ b/interface_logging/style.css
@@ -12,22 +12,21 @@ body {
     display: flex; 
     flex-direction: row; 
     width: 100%; 
-    height: 100vh; 
+    height: 100%; 
 }
 
 .image-section {
     flex: 1; 
     display: flex;
     justify-content: center; 
-    align-items: center; 
+    align-items:none; 
     background-color: #f0f0f0;
     
 }
 
 .image-section img {
-    max-width: 80%; 
-    max-height: 80%;
-    object-fit: contain; 
+    max-width: 1000px; 
+    max-height: 2000px;
 }
 
 
@@ -70,12 +69,12 @@ body {
 }
 
 .auth-container input:focus {
-    border-color: #4caf50;
+    border-color: #0f518c;
     outline: none;
 }
 
 .auth-container button {
-    background-color: #4caf50;
+    background-color: #0f518c;
     color: white;
     padding: 0.8rem;
     border: none;
@@ -86,7 +85,7 @@ body {
 }
 
 .auth-container button:hover {
-    background-color: #45a049;
+    background-color: #0f518c;
 }
 
 .auth-container p {
@@ -96,7 +95,7 @@ body {
 }
 
 .auth-container a {
-    color: #4caf50;
+    color: #0f518c;
     text-decoration: none;
 }
 
@@ -119,14 +118,15 @@ body {
     }
 }
 
-.gradient{
-    font-family :Georgia, 'Times New Roman', Times, serif;
-    background-image: linear-gradient(to right,#4fbe53,rgb(57, 137, 250));
-    background-clip: text; 
-    color: transparent;
-}
-
 .form-section{
     display: flex;
     flex-direction: column;
+    margin-top: 100px;
+}
+
+.form-section img{
+    height: 90px;
+    width: 170px;
+    margin-top: -90px;
+    margin-bottom: 20px;
 }
