--- a/interface_net/about.css
+++ b/interface_net/about.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, sans-serif;
+    overflow-x:auto;
+  }
 .tete{
     background-color: whitesmoke;
     width: 100%;
@@ -16,49 +20,63 @@
 }
 
 .titre .icon {
-    width: 25px; 
-    height: 25px;
-    margin-right: 10px; 
+    width: 140px; 
+    height: 40x;
+    margin-right: 1px; 
+    margin-bottom: 9px;
 }
-
- .gradient{
-    font-family :Georgia, 'Times New Roman', Times, serif;
-    background-image: linear-gradient(to right,#4fbe53,rgb(57, 137, 250));
-    background-clip: text; 
-    color: transparent;
- }
+.liste1{
+    display: flex;
+    gap: 20px
+}
+.liste2{
+    display: flex;
+}
 .liste ul{
     list-style: none;
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 50px;
     margin-top: 2rem;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 .liste ul li {
     color: black;
 }
-
-.liste a{
-    color: black;
-    text-decoration: none;
+.navbar{
+    margin-left: 10px;
 }
+.navbar2{
+    margin-right: 10px;
+}
+.navbar a {
+    text-decoration: none;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+}
+.navbar2 a {
+    text-decoration: none;
+    color: rgb(10, 9, 9);
+}
+
+
 .liste a:hover{
-    color: rgb(20, 173, 200);
+    color: #0f518c;
     text-decoration: underline;
     cursor: pointer;
 }
 .liste ul li button{
-    border: 2px solid rgb(29, 152, 201);
+    border: 2px solid #0f518c;
     border-radius: 10px;
-    color: rgb(29, 101, 201);
-    background-color: inherit;
+    color: #ffffff;
+    background-color: #0f518c;
     width: 100px;
     height: 25px;
 }
 .liste ul li button:hover{
-    background-color: rgb(20, 173, 200);
-    color: black;
+    background-color: #ffffff;
+    
+    color: rgb(255, 255, 255);
     cursor: pointer;
 }
 
@@ -148,8 +166,14 @@
     text-align: center;
     background-color: #333;
     color: white;
-    padding: 20px 0;
+    padding: 30px 0;
+    display: flex;
 }
-
-   
-
+.footer p{
+    margin-left: 500px;
+    margin-top: 45px;
+}
+.footer img{
+    width: 100px;
+    margin-left: 20px;
+}
