--- a/Home/home.css
+++ b/Home/home.css
@@ -180,8 +180,20 @@ body.dark-mode .card{
   border-color: #ffffff;
 }
 
-body.dark-mode .separator2 li{
-  background-color: #ed0049;
+body.dark-mode .tooltip-container{
+  background-color: #000000;
+}
+
+body.dark-mode .text rect {
+  fill: #ffffff;
+}
+body.dark-mode .text path {
+  fill: #ffffff;
+}
+
+
+body.dark-mode .text p{
+ color: #ffffff;
 }
 
   .ui-switch {
@@ -472,6 +484,9 @@ body.dark-mode .courses-list button {
   text-decoration: none;
   color: #000;
 }
+.profile a:hover{
+  color: #0f528c;
+}
  .profile-photo img{
   width: 40px;
   height: 40px;
@@ -488,7 +503,6 @@ body.dark-mode .courses-list button {
   position: relative;
   transition: all 0.3s;
   background-color: rgb(255, 255, 255);
-  padding: 10px 18px;
   border-radius: 12px;
   cursor: pointer;
   border: 1px solid rgb(211, 211, 211);
@@ -510,7 +524,7 @@ body.dark-mode .courses-list button {
   height: auto;
   
 }
-.tooltip {
+.tooltip2 {
   position: absolute;
   top: 0;
   left: 50%;
@@ -526,7 +540,7 @@ body.dark-mode .courses-list button {
 
 
 
-.tooltip-container:hover .tooltip {
+.tooltip-container:hover .tooltip2 {
   top: 100%;
   opacity: 1;
   visibility: visible;
