--- a/interface_net/contact.css
+++ b/interface_net/contact.css
@@ -25,27 +25,45 @@ body {
 }
 
 .titre .icon {
-    width: 25px; 
-    height: 25px;
-    margin-right: 10px; 
+    width: 140px; 
+    height: 40x;
+    margin-right: 1px; 
+    margin-bottom: 9px;
+    margin-top: 10px;
 }
 
- .gradient{
-    font-family :Georgia, 'Times New Roman', Times, serif;
-    background-image: linear-gradient(to right,#4fbe53,rgb(57, 137, 250));
-    background-clip: text; 
-    color: transparent;
- }
+.liste1{
+    display: flex;
+    gap: 20px
+}
+.liste2{
+    display: flex;
+}
 .liste ul{
     list-style: none;
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 50px;
     margin-top: 2rem;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 .liste ul li {
     color: black;
+}
+.navbar{
+    margin-left: 10px;
+}
+.navbar2{
+    margin-right: 10px;
+}
+.navbar a {
+    text-decoration: none;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+}
+.navbar2 a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
 .liste a{
@@ -53,27 +71,33 @@ body {
     text-decoration: none;
 }
 .liste a:hover{
-    color: rgb(20, 173, 200);
+    color: #ffffff;
     text-decoration: underline;
     cursor: pointer;
 }
+.navbar a:hover{
+    color:#0f518c;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .liste ul li button{
-    border: 2px solid rgb(29, 152, 201);
+    border: 2px solid #0f518c ;
     border-radius: 10px;
-    color: rgb(29, 101, 201);
+    color: #0f518c;
     background-color: inherit;
     width: 100px;
     height: 25px;
 }
 .liste ul li button:hover{
-    background-color: rgb(20, 173, 200);
-    color: black;
+    background-color: #0f518c ;
+    color: rgb(255, 255, 255);
     cursor: pointer;
 }
 /* En-tête */
 header {
     text-align: center;
-    background-color: #4CAF50;
+    background-color: #0f518c;
     color: white;
     padding: 20px 10px;
 }
@@ -98,7 +122,7 @@ main {
 }
 
 h2 {
-    color: #4CAF50;
+    color: #0f518c;
     margin-bottom: 10px;
 }
 
@@ -137,22 +161,28 @@ h2 {
     padding: 10px 15px;
     font-size: 1rem;
     color: white;
-    background-color: #4CAF50;
+    background-color: #0f518c;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .contact-form button:hover {
-    background-color: #45a049;
+    background-color: #0f518c
 }
 
 /* Pied de page */
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background: #333;
+.footer {
+    background-color: #333;
     color: white;
-    font-size: 0.9rem;
-    margin-top: 20px;
+    padding: 20px 0;
+    display: flex;
+}
+.footer p{
+    margin-left: 500px;
+    margin-bottom: -30px;
+}
+.footer img{
+    width: 100px;
+    margin-left: 20px;
 }
