--- a/User profile/user.css
+++ b/User profile/user.css
@@ -173,6 +173,12 @@ margin-right: 1px;
 margin-bottom: 9px;
 }
 
+body.dark-mode .section{
+  background-color: #22212100;
+}
+body.dark-mode .profile-header{
+  background-color: #22212100;
+}
 .ui-switch {
   margin-top: 38px;
 }
@@ -459,3 +465,34 @@ margin-bottom: 9px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+.footer {
+  text-align: center;
+  background-color: white;
+  color: #333;
+  display: flex;
+  margin-top: 50px ;
+}
+.footer h4{
+  text-align: center;
+  margin-left: 500px;
+  margin-top: 48px;
+}
+.footer img{
+  content: url('/ASSETS/swap.png');
+  width: 100px;
+  margin-left: 20px;
+}
+
+
+body.dark-mode .footer {
+  background-color: #0f528c04;;
+  color: #ffffff; 
+}
+
+body.dark-mode .footer h4 {
+  color: #ffffff; 
+}
+
+body.dark-mode .footer img {
+  content: url('/ASSETS/swap-dark.png'); 
+}
