--- a/interface_net/privacy.css
+++ b/interface_net/privacy.css
@@ -1,74 +1,90 @@
-.tete{
-    background-color: whitesmoke;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .titre{
-    margin-left: 25px;
-    display: flex;
-    align-items: center;
-    
-    
-  }
-  
-  .titre .icon {
-    width: 25px; 
-    height: 25px;
-    margin-right: 10px; 
-  }
-  
-  .gradient{
-    font-family :Georgia, 'Times New Roman', Times, serif;
-    background-image: linear-gradient(to right,#4fbe53,rgb(57, 137, 250));
-    background-clip: text; 
-    color: transparent;
-  }
-  .liste ul{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    margin-top: 2rem;
-    margin-right: 30px;
-  }
-  .liste ul li {
-    color: black;
-  }
-  
-  .liste a{
-    color: black;
-    text-decoration: none;
-  }
-  .liste a:hover{
-    color: rgb(20, 173, 200);
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  .liste ul li button{
-    border: 2px solid rgb(29, 152, 201);
-    border-radius: 10px;
-    color: rgb(29, 101, 201);
-    background-color: inherit;
-    width: 100px;
-    height: 25px;
-  }
-  .liste ul li button:hover{
-    background-color: rgb(20, 173, 200);
-    color: black;
-    cursor: pointer;
-  }
+
   body {
       font-family: Arial, sans-serif;
       margin: 20px;
       background-color: #f9f9f9;
     }
+
+    .tete{
+      background-color: whitesmoke;
+      width: 100%;
+      height: 100px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+  }
+  
+  .titre{
+      margin-left: 25px;
+      display: flex;
+      align-items: center;
+      
+      
+  }
+  
+  .titre .icon {
+      width: 140px; 
+      height: 40x;
+      margin-right: 1px; 
+      margin-bottom: 9px;
+  }
+  .liste1{
+      display: flex;
+      gap: 20px
+  }
+  .liste2{
+      display: flex;
+  }
+  .liste ul{
+      list-style: none;
+      display: flex;
+      flex-direction: row;
+      gap: 50px;
+      margin-top: 2rem;
+      margin-right: 10px;
+  }
+  .liste ul li {
+      color: black;
+  }
+  .navbar{
+      margin-left: 10px;
+  }
+  .navbar2{
+      margin-right: 10px;
+  }
+  .navbar a {
+      text-decoration: none;
+      font-family:Verdana, Geneva, Tahoma, sans-serif;
+      color: black;
+  }
+  .navbar2 a {
+      text-decoration: none;
+      color: rgb(10, 9, 9);
+  }
+  
+  
+  .liste a:hover{
+      color: #0f518c;
+      text-decoration: underline;
+      cursor: pointer;
+  }
+  .liste ul li button{
+      border: 2px solid #0f518c;
+      border-radius: 10px;
+      color: #ffffff;
+      background-color: #0f518c;
+      width: 100px;
+      height: 25px;
+  }
+  .liste ul li button:hover{
+      background-color: #ffffff;
+      
+      color: rgb(255, 255, 255);
+      cursor: pointer;
+  }
     
     header {
-      background-color: #4fbe53;
+      background-color: #0f518c;
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -102,18 +118,6 @@
       margin-bottom: 20px;
     }
     
-    footer {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-      clear: both;
-    }
-    
-    footer p {
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
     
     /* Responsive design */
     
@@ -137,3 +141,19 @@
         font-size: 14px;
       }
     }
+
+    .footer {
+      text-align: center;
+      background-color: #333;
+      color: white;
+      padding: 30px 0;
+      display: flex;
+  }
+  .footer p{
+      margin-left: 500px;
+      margin-top: 45px;
+  }
+  .footer img{
+      width: 100px;
+      margin-left: 20px;
+  }
