--- a/Home/home.css
+++ b/Home/home.css
@@ -355,10 +355,11 @@ background-color: #504f4f;
   .skills-cards{
       flex-direction: column; /* Passe les éléments à une colonne sur petits écrans */
       align-items: flex-start; /* Aligne à gauche */
+      padding: -20px;
   }
-  .skill-card{
-    margin-right: 30px;
-}
+  body{
+    overflow-x: hidden;
+  }
 
 
 }
@@ -458,7 +459,6 @@ padding: 20px;
 justify-content: center;
 gap: 25px;
 margin-top: 30px;
-margin-left: 45px;
 }
 
 .skill-card {
