--- a/interface_net/settings.css
+++ b/interface_net/settings.css
@@ -87,6 +87,7 @@ body {
   body.dark-mode .skill-card{
     border: 1px solid rgba(255, 255, 255, 0.1); 
   }
+
   
   li a i {
   color: #000; /* couleur des icônes en mode clair (noir) */
@@ -199,6 +200,18 @@ body {
     margin-bottom: 9px;
   }
   
+  body.dark-mode .Form {
+    background-color: #222121a1;
+    
+  }
+  body.dark-mode input {
+    background-color: #222121dc;
+    
+  }
+  body.dark-mode textarea {
+    background-color: #2221219f;
+    
+  }
   .ui-switch {
     margin-top: 38px;
   }
