--- a/Home/home.css
+++ b/Home/home.css
@@ -5,6 +5,26 @@ body {
 element.style {
   width: 1500px;
 }
+.contact-button {
+  
+  padding: 11px 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+    font-weight: 600;
+    color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-left: 124px; /* Moves it slightly to the right */
+  position: relative; /* Enables the use of top and left for fine adjustments */
+  top: -45px; /* Moves it slightly upward */
+}
+
+.contact-button:hover {
+  background-color: rgb(40, 40, 151);
+}
 
 .navbar{
   min-width: 1350px;
@@ -520,8 +540,9 @@ border-radius: 50%;
 display: flex;
 align-items: center;
 width: 100px;
-margin-left: 70px;
-justify-content: center;
+margin-left: 38px;
+justify-content: right;
+
 position: relative;
 transition: all 0.3s;
 background-color: rgb(255, 255, 255);
@@ -540,6 +561,7 @@ gap: 10px;
 font-size: 14px;
 font-weight: 600;
 color: rgb(0, 0, 0);
+margin-left: 4px;
 }
 .svgIcon {
 width: 16px;
