--- a/Home/home.css
+++ b/Home/home.css
@@ -346,27 +346,30 @@ background-color: #504f4f;
 .menu ul li a:hover {
   color: #0f518c; 
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 450px) {
   body{
     background-color: #f0f0f0;
     overflow-x:hidden;
-}
+ }
 .icones1 {
-    display: none;
+  margin-left: 40px;
+  margin-top: -78px;
 }
 .navbar {
+    min-width: 450px;
     flex-direction: column;
     align-items: flex-start;
-    height: 150px;
+    height: 230px;
 }
 
 .navbar .icon {
-  margin-top: -41px;
+  margin-top: -30px;
   margin-left: 90px;
 }
+
 .icones2{
-    margin-left: 100px;
-    margin-top: -115px;
+    margin-top: -130px;
+    margin-left: -270px;
 }
 .separator{
     display: none;
@@ -377,9 +380,36 @@ background-color: #504f4f;
       align-items: flex-start; /* Aligne à gauche */
       padding: -20px;
   }
+
+
+}
+@media screen and (min-width: 500px) and (max-width: 1024px){
   body{
-    overflow-x: hidden;
-  }
+    background-color: #f0f0f0;
+    overflow-x:hidden;
+}
+.icones1 {
+  margin-left: 120px;
+  margin-top: -78px;
+}
+.navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    height: 180px;
+}
+
+.navbar .icon {
+  margin-top: -30px;
+  margin-left: 380px;
+}
+
+.icones2{
+    margin-top: -70px;
+    margin-left: 100px;
+}
+.separator{
+    display: none;
+}
 
 
 }
