--- a/interface_net2/my_skills.css
+++ b/interface_net2/my_skills.css
@@ -310,31 +310,33 @@ body.dark-mode h1 .icon {
   .menu ul li a:hover {
     color: #0f518c; 
   }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 500px) {
     body{
       background-color: #f0f0f0;
       overflow-x:hidden;
   }
   .icones1 {
-      display: none;
+    margin-left: 25px;
+    margin-top: -78px;
   }
   .navbar {
+      min-width: 450px;
       flex-direction: column;
       align-items: flex-start;
-      height: 150px;
+      height: 230px;
   }
-
+  
   .navbar .icon {
     margin-top: -30px;
-    margin-left: 150px;
+    margin-left: 65px;
   }
-
+  
+  .icones2{
+      margin-top: -130px;
+      margin-left: -300px;
+  }
   .separator{
       display: none;
-  }
-  .icones2{
-      margin-left: 150px;
-      margin-top: -115px;
   }
 
     .cards{
@@ -343,7 +345,30 @@ body.dark-mode h1 .icon {
     }
 
   }
-
+  @media screen and (min-width: 500px) and (max-width: 1024px){
+    .icones1 {
+      margin-left: 120px;
+      margin-top: -78px;
+    }
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        height: 180px;
+    }
+    
+    .navbar .icon {
+      margin-top: -30px;
+      margin-left: 380px;
+    }
+    
+    .icones2{
+        margin-top: -70px;
+        margin-left: 100px;
+    }
+    .separator{
+        display: none;
+    }
+  }
 
 .skills-header {
     text-align: center;
